# troad

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  Server.toml  l.txt  l3.txt  l4.txt
.github/workflows/: cmake-multi-platform.yml  rust.yml
src/: CMakeLists.txt  main.cpp  main.rs  ror.txt  server.rs
src/event/: mod.rs
src/net/: server.cpp  server.hpp  session.cpp  session.hpp  state.hpp
src/protocol/: mod.rs
src/protocol/packets/: mod.rs
src/protocol/serde/: de.rs  mod.rs  ser.rs  var_int.rs
src/util/: binary.hpp  platform.hpp
troad_auth/: Cargo.toml
troad_auth/src/: lib.rs  session_server.rs  sha1.rs
troad_core/: Cargo.toml
troad_core/src/: main.rs  server.rs
troad_core/src/event/: mod.rs
troad_core/src/protocol/packets/: mod.rs
troad_crypto/: Cargo.toml
troad_crypto/src/: conn.rs  lib.rs  rsa.rs
troad_ecs/: Cargo.toml
troad_event/: Cargo.toml
troad_protocol/: Cargo.toml
troad_protocol/src/: chat.rs  lib.rs  main.rs  net.rs  status.rs
troad_protocol/src/game/: mod.rs
troad_protocol/src/handshake/: mod.rs  server_bound.rs
troad_protocol/src/login/: client_bound.rs  mod.rs  server_bound.rs
troad_serde/: Cargo.toml
troad_serde/src/: de.rs  err.rs  lib.rs  main.rs  ser.rs  var_int.rs
