[package]
name = "troad"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = "0.13.2"
bincode = "1.3.3"
dashmap = "6.0.0"
num = "0.4.3"
num-traits = "0.2.19"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
simdjson = "0.0.1"
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
