[package]
name = "troad_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
bnum = "0.11.0"
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
# Only used for generating SHA1 hex digests,
# so I decided to use the smalelst library here possible.
sha1_smol = "1.0.0"
uuid = { version = "1.9.1", features = ["serde", "v3", "v4"] }
