[package]
name = "troad_core"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "6.0.0"
rand = "0.8.5"
tokio = { version = "1.38.0", features = ["net", "rt-multi-thread", "macros"] }
troad_auth = { version = "0.1.0", path = "../troad_auth" }
troad_crypto = { version = "0.1.0", path = "../troad_crypto" }
troad_ecs = { version = "0.1.0", path = "../troad_ecs" }
troad_event = { version = "0.1.0", path = "../troad_event" }
troad_protocol = { version = "0.1.0", path = "../troad_protocol" }
troad_serde = { version = "0.1.0", path = "../troad_serde" }
